REGRESSION(r218325): [GTK] Runtime critical warnings running layout tests that show a popup menu https://bugs.webkit.org/show_bug.cgi?id=173421

Reviewed by Carlos Alberto Lopez Perez.

In r218325 I forgot to create a WebKitPopupMenu or WebPopupMenuProxyGtk depending on whether the view is a
WebKitWebView or not.

* UIProcess/API/gtk/PageClientImpl.cpp:
(WebKit::PageClientImpl::createPopupMenuProxy):

Canonical link: https://commits.webkit.org/190333@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218382 268f45cc-cd09-0410-ab3c-d52691b4dbfc